--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 @import url(https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css);
 .App {
   text-align: center;
+  background-color: orangered;
 }
 
 .navbar{
@@ -25,7 +26,19 @@
     width: 100%;
 
   }
+  .welcomepage{
+    position: relative;
+  }
+.welcomepage > p {
+  position: absolute;
 
+  top: 10em;
+  right: 2em;
+  width: 40%;
+  padding: 0.8em;
+  font-weight: bolder;
+  color: azure;
+}
   
   .btn {
     background-color:white ;
@@ -73,7 +86,6 @@
   max-width: 200px;
   padding: 5px;
 
-  max-height: 700px;
   overflow-y: scroll;
   background-color: rgb(24, 24, 24);
 }
@@ -83,6 +95,11 @@
   font-weight: bolder;
   background-color:wheat;
   margin-top: 5px;
+  transition: 1s;
+}
+li:hover {
+  background-color: orangered;
+  transform: scale(1.3);
 }
 .main {
   display: flex;
@@ -102,15 +119,67 @@
 
 .form-space{
   display: flex;
-  margin: 12% auto;
   width: 75%;
+  margin: 12% auto;
   border: 2px solid ;
-  box-shadow: inset;
+  align-items: center;
+}
+.form-img  {
+  width: 50%;
 }
 .form-img img{
-  height: 60vh;
+  /* height: 60vh; */
+  width: 100%;
 }
 .details{
   font-weight: bolder;
   font-size: x-large;
+  width: 50%;
+  padding: 1em;;
+}
+.ingredients-img{
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-around;
+}
+.ingredients-img > img{
+  width: 40%;
+  border-radius: 12px;
+  
+}
+.ingredients{
+  display: flex;
+  flex-wrap: wrap;
+  padding: 5em;
+  width: 50%;
+
+}
+.ingredient{
+  width: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.ingredient > img{
+  width: 100%;
+}
+.recipesdetails h1 ,h2{
+  text-align: center;
+
+
+}
+.sentences {
+  
+  font-weight: bold;
+}
+.instructions {
+  margin: 2em auto;
+  padding: 2em;
+  background: url("https://cdn.pixabay.com/photo/2016/05/26/14/11/chef-1417239_960_720.png") no-repeat center center;
+}
+.recipesdetails > button {
+  background-color: orangered;
+  color: beige;
+  border: none;
+  transform: scale(1.5);
 }
