--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,7 @@
   color: orangered;
   font-size: 60px;
   font-weight: 200px;
-  padding-right: 60pc;
+  padding-right: 18em;
 }
 .meals{
   color: orangered
