--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,7 @@
 .card > img {
   height: 20vh;
   border-radius: 5px;
+  transition: 1s;
 }
 .card {
   border: none;
@@ -68,7 +69,7 @@
   min-width: 200px;
   max-width: 200px;
   margin: 0.5em;
-
+  
   box-shadow: 0.04em 0.04em 0.2em black;
 }
 .recipes {
