--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 @import url(https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css);
+@import 'mdb-react-ui-kit/dist/css/mdb.min.css';
+@import "@fortawesome/fontawesome-free/css/all.min.css";
 .App {
   text-align: center;
   background-color: orangered;
